<resources>
    <string name="app_name">Teb Library</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">افزودن به علافه مندی ها</string>
    <string name="action_download">دانلود کتاب</string>
    <string name="action_home">خانه</string>
    <string name="action_favorite">علاقه مندی ها</string>
    <string name="action_exit">خروج</string>
    <string name="action_account">پروفایل</string>
    <string name="more"><![CDATA[موارد بیشتر >>]]></string>
    <string name="digital_library">کتابخانه دیجیتال</string>
    <string name="no_internet_connection">خطا در برقراری ارتباط</string>
    <string name="server_errore">خطای سمت سرور </string>
    <string name="no_favourit">کتابی به علاقه مندی ها اضافه نشده است</string>
    <string name="success_uplad">فایل شما با موفقیت اپلود شد</string>

    <!--menu myRefrence-->
    <string name="my_refrence_new">جدید</string>
    <string name="my_refrence_reading">در حال خواندن</string>
    <string name="my_refrence_will_read">خواهم خواند</string>

    <string name="my_refrence_readed">خوانده شده</string>
    <!--menu myRefrence-->
    <!--menu Review-->
    <string name="review_subjective">مرور موضوعی</string>
    <string name="review_alphabet"> مرور الفبایی</string>
    <string name="review_collections"> مرور مجموعه ها</string>
    <!--menu myRefrence-->
    <string-array name="language_array">
        <item>انگلیسی</item>
        <item>فارسی</item>
        <item>عربی</item>
    </string-array>

    <string-array name="search_filters">
        <item>عنوان</item>
        <item>شرح پدیدآور</item>
        <item>موضوع</item>
        <item>ناشر</item>
        <item>یادداشت</item>
        <item>زبان</item>
        <item>نوع منبع</item>
        <item>تمام متن</item>
        <item>تمام موارد</item>
    </string-array>

    <string-array name="search_filters_tag">
        <item>Title</item>
        <item>Author</item>
        <item>Subject</item>
        <item>Publisher</item>
        <item>Note</item>
        <item>Language</item>
        <item>Genre</item>
        <item>FullText</item>
        <item>fullvalues</item>
    </string-array>

    <string-array name="sort_base_search">
        <item>عنوان</item>
        <item>شرح پدیدآور</item>
        <item>نوع منبع</item>
        <item>تاریخ تغییر</item>
    </string-array>

    <string-array name="sort_base_search_tag">
        <item>TitleSearch</item>
        <item>AuthorSearch</item>
        <item>TypeOfResourceString</item>
        <item>ChangeDate</item>
    </string-array>
    <string-array name="logical_search_filters">
        <item>و</item>
        <item>یا</item>
        <item>بجز</item>
    </string-array>

    <string-array name="logical_search_filters_tag">
        <item>And</item>
        <item>Or</item>
        <item>Not</item>
    </string-array>

    <string-array name="sort_type">
        <item>صعودی</item>
        <item>نزولی</item>
    </string-array>

    <string-array name="sort_type_tag">
        <item>ASC</item>
        <item>DESC</item>
    </string-array>

    <string-array name="my_refrence_filters">
        <item>کتاب الکترونیک</item>
        <item>مقاله</item>
        <item>سند</item>
        <item>وصیتنامه</item>
        <item>متن سخنرانی</item>
        <item>خود زندگینامه</item>
        <item>کتاب شناسی</item>
        <item>زندگینامه</item>
        <item>مقاله روزنامه ای</item>
        <item>ننسخه خطی</item>
        <item>مجله</item>
        <item>نامه</item>
        <item>رمان</item>
        <item>شعر</item>
        <item>اسلاید</item>
        <item>پایان نامه</item>
    </string-array>


    <string-array name="education_type">
        <item>نامشخص</item>
        <item>کم سواد</item>
        <item>ابتدایی </item>
        <item>راهنمایی</item>
        <item>سیکل</item>
        <item>دبیرستان</item>
        <item>دیپلم</item>
        <item>فوق دیپلم</item>
        <item>لیسانس</item>
        <item>فوق لیسانس</item>
        <item>دکتری</item>
        <item>فوق دکتری</item>
        <item>طلبه</item>
        <item>سطح</item>
        <item>خارج</item>
        <item>اجتهاد</item>
        <item>دانشجو</item>
        <item>دانشجوی دکتری</item>
    </string-array>

    <string-array name="education_type_tag">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>38</item>
        <item>51</item>
    </string-array>

    <string-array name="my_refrence_tag">
        <item>-1</item>
        <item>-2</item>
        <item>-3</item>
    </string-array>
    <string-array name="my_refrence">
        <item>خواهم خواند</item>
        <item>درحال خواندن</item>
        <item>خوانده شده</item>
    </string-array>


    <!--yahyapour-->
    <string name="description_activity_title">مشخصات کتاب</string>
    <string name="profile_activity_title">ویرایش پسورد</string>
    <string name="main_activity_title">کتابخانه تبیان</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_login">کتابخانه تبیان</string>
    <string name="wrong_user_pass">نام کاربری یا رمز عبور اشتباه است</string>
    <string name="network_connection_fail">خطا در برقراری ارتباط</string>
    <string name="len_password_error">برای رمز عبور حداقل 6 و حداکثر 16 کاراکتر وارد  کنید.</string>
    <string name="min_username_error">برای نام کاربری حداقل 6 کاراکتر وارد نمایید.</string>
    <string name="format_username_error">برای نام کاربری فقط از حروف انگلیسی،اعداد و _ استفاده کنید.</string>
    <string name="format_begin_username_error">نام کاربری باید با حروف انگلیسی آغاز شود.</string>
    <string name="forgotpassword">رمز عبور خود را فراموش کرده ام</string>
    <string name="guest">ورود به صورت مهمان</string>
    <string name="showpassword">نمایش رمز عبور</string>
    <string name="min_nickname_error">برای نام مستعار حداقل 6 کاراکتر وارد نمایید.</string>
    <string name="format_begin_nickname_error">نام مستعار باید با حروف انگلیسی یا فارسی آغاز شود.</string>
    <string name="format_nickname_error">برای نام مستعار فقط از حروف انگلیسی، فارسی، اعداد و _ استفاده کنید.</string>
    <string name="plz_wait">لطفا صبر کنید.</string>
    <string name="edit_mobileno">ویرایش شماره تلفن</string>
    <string name="submit">ثبت</string>
    <string name="activationCode">کد فعال سازی</string>
    <string name="resend_activation_code">ارسال مجدد کد فعال سازی</string>
    <string name="send_activation_code">ارسال کد فعال سازی</string>
    <string name="mobileNo">شماره تلفن همراه</string>
    <string name="username">نام کاربری</string>
    <string name="nickname">نام مستعار</string>
    <string name="password">رمز عبور</string>
    <string name="registration">ثبت نام</string>
    <string name="activation_code_sent">کد فعال سازی ارسال شد.</string>
    <string name="operation_failed_please_try_again">عملیات انجام نشد ، لطفا مجددا سعی کنید. </string>
    <string name="repeated_mobile_no_error">شماره تلفن همراه تکراری می باشد. لطفا  شماره دیگری را انتخاب نمایید.</string>
    <string name="repeated_username_error">نام کاربری تکراری می باشد. لطفا نام کاربری دیگری را انتخاب نمایید.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mobile_no">MobileNoActivity</string>
    <string name="title_activity_description">DescriptionActivity</string>
    <string name="comment_registeration">در عملیات ثبت مشکلی رخ داده است</string>
    <string name="success_comment">نظر شما پس از تایید نمایش داده خواهد شد </string>
    <string name="no_comment">نظری برای نمایش وجود ندارد.</string>


    <string name="action_reads_book">مطالعه در آینده</string>
    <string name="book_readed">کتابهای خوانده شده</string>
    <string name="book_mark">نشان شده ها</string>
    <string name="search">جستجو</string>
    <string name="please_wait">لطفا صبر کنید</string>
    <string name="please_try_again">لطفا مجددا تلاش کنید</string>
    <string name="profile_image_changed">عکس پروفایل تغییر کرد</string>
    <string name="cover_image_changed">عکس کاور تغییر کرد</string>
    <string name="pick_image_intent_chooser_title">تصویر</string>
    <string name="problem_on_selecting_image">عکسی انتخاب نشده است</string>
    <string name="crop_image_menu_rotate_left">گردش به چپ</string>
    <string name="crop_image_menu_rotate_right">گردش به راست</string>
    <string name="crop_image_menu_crop">برش</string>
    <string name="crop_image_activity_title" />
    <string name="pick_from_gallery">انتخاب از گالری</string>
    <string name="takePhotoByCamera">گرفتن عکس از دوربین</string>
    <string name="profile_book_title">مشخصات کتاب</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="book_all">تمام موارد</string>
    <string name="book_authour_description">شرح پدیدآور</string>
    <string name="book_subject">موضوع</string>
    <string name="book_publisher">ناشر</string>
    <string name="book_comment">یادداشت</string>
    <string name="book_language">زبان</string>
    <string name="book_refrence_type">نوع منبع</string>
    <string name="book_all_text">تمام متن</string>
    <string name="book_title">عنوان</string>
    <string name="book_author">پدیدآورندگان</string>
    <string name="book_lables">برچسب</string>
    <string name="book_notes">یادداشت</string>
    <string name="book_public_publish">اجازه نمایش برای عموم</string>

    <string name="ask_question">پرسش از کتابدار</string>
    <string name="search_question">  جستجو در مشاوره ها</string>
    <string name="send">ارسال</string>
    <string name="select">انتخاب</string>
    <string name="cancel">لغو</string>
    <string name="close">بستن</string>
    <string name="upload_book">اپلود کتاب</string>
    <string name="persian_cultural_terminology">اصطلاحنامه فرهنگی فارسی</string>
    <string name="data_center_terminolory">اصطلاحنامه مرکز اطلاعات </string>
    <string name="specials">ویژه ها</string>
    <string name="favoriouts">محبوب ترین ها</string>


    <string name="user_name">نام :</string>
    <string name="user_age"> سن :</string>
    <string name="user_education">تحصیلات : </string>
    <string name="user_email">آدرس الکترونیک :</string>
    <string name="user_gender">جنسیت : </string>
    <string name="user_unknow">ناشناس : </string>
    <string name="man">مرد</string>
    <string name="woman">زن</string>
    <string name="user_question">متن سوال </string>
    <string name="consultation_id_password">پسورد : </string>
    <string name="metadata">فراداده </string>


    <string name="email_erore"></string>


    <string name="show">1</string>
    <string name="answer">answer</string>


</resources>
