<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:title="@string/action_home" android:icon="@drawable/ic_launcher"
        android:orderInCategory="100"
        android:id="@+id/action_home"/>

    <item android:title="@string/action_favorite"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="101"
        android:id="@+id/action_favorite"/>

    <item android:title="@string/action_download"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="101"
        android:id="@+id/action_more"/>

    <item android:title="@string/action_download"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="101"
        android:id="@+id/action_last_seen"/>

    <item android:title="@string/action_download"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="101"
        android:id="@+id/action_account"/>
</menu>
