<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="library.tebyan.com.teblibrary.fragment.UploadBookFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right|center"
        android:layout_margin="18dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:layout_marginLeft="10dp" />
    </LinearLayout>


    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CAD1E7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right|center"
        android:layout_margin="18dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CAD1E7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right|center"
        android:layout_margin="18dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_language"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CAD1E7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right|center"
        android:layout_margin="18dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_lables"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CAD1E7"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right|center"
        android:layout_margin="18dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_notes"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CAD1E7"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right|center"
        android:layout_margin="18dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_public_publish"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CAD1E7"/>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:gravity="right|center"-->
        <!--android:layout_margin="18dp">-->

        <!--<CheckBox-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="FielUplaod"-->
            <!--android:layout_marginLeft="10dp" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left|center"
        android:layout_margin="18dp">
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"/>
    </LinearLayout>

</LinearLayout>
