
<!--tools:context="library.tebyan.com.teblibrary.fragment.RegistrationFragment">-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrl1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/divider">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:hint="@string/username"
            android:nextFocusDown="@+id/nicknameEditText"
            android:padding="10dip"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/cardview_light_background" />

        <EditText
            android:id="@+id/nicknameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:hint="@string/nickname"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dip"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/cardview_light_background" />

        <EditText
            android:id="@+id/passwordEditText_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dip"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/cardview_light_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/showpassword"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/checkBox_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <Button
            android:id="@+id/regButton"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scrl1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="75dp"
            android:layout_marginTop="20dp"
            android:background="@color/accentColor"
            android:text="@string/registration"
            android:textColor="#ffffff" />
    </LinearLayout>

</ScrollView>